removed primer button from nav, added small primer badge on header, overflow-x fixed, fixed title sizing, etc.

--- a/src/styles/Globals.scss
+++ b/src/styles/Globals.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;500&display=swap');
 
 :root {
-  
+  overflow-x: hidden;
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: 'Inter', ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -45,6 +45,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+
+    overflow-x: hidden;
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
