--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -12,24 +12,107 @@
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+
+
+.description a {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 13px;
+}
+
+.description p {
+
+  padding: 0.5em 1em;
+  background-color: rgba(var(--callout-rgb), 0.5);
+  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
+  border-radius: 20px;
+  
+}
+
+
+.thirteen {
+  &:hover{
+    color: black !important;
+    &::after{
+      background-image: linear-gradient(
+        to left,
+        rgb(218, 218, 218),
+        #d7d7d7,
+        #ffffff,
+        $primary-color
+      );
+      color: black !important;
+    }
+  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // width: auto;
+  // height: 50px;
+  transform: translateZ(0);
+  border-radius: var(--border-radius);
+  overflow: hidden;
+  box-shadow: 0px 2px 8px -1px #0000001a;
+}
+
+.thirteen::before,
+.thirteen::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+}
+
+/* Conic Gradient Animation */
+.thirteen::before {
+  animation: 10s rotate linear infinite;
+  width: 200%;
+  height: 200%;
+  background: var(--tile-border);
+  
+}
+
+/* Inner Square */
+.thirteen::after {
+  
+  inset: 0;
+  padding: 1px;
+  border-radius: var(--border-radius);
+  /* background: linear-gradient(
+    to bottom right,
+    rgba(var(--tile-start-rgb), 1),
+    rgba(var(--tile-end-rgb), 1)
+  ); */
+  background: linear-gradient(to bottom right, rgb(34, 34, 34), rgb(0, 0, 0));
+  background-clip: content-box;
+}
+
+@media (prefers-reduced-motion) {
+  .thirteen::before {
+    animation: none;
+  }
+}
+
 .keyword {
   color: $accent-color;
 }
 
 .title {
-  font-weight: 600;
-  font-size: 64px;
+  font-weight: 500;
+  font-size: 80px;
   background: rgb(255, 255, 255);
   background-image: linear-gradient(
-    90deg,
-    rgb(255, 255, 255) 70%,
-    rgb(130, 130, 130) 100%
+  133deg,
+    rgb(255, 255, 255) 15%,
+    rgb(214, 214, 214) 70%,
+    rgb(88, 88, 88) 100%
   );
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   @include flex() {
-    font-size: 44px;
+    font-size: 50px;
   }
 }
 
@@ -154,30 +237,30 @@
   margin: 1em 0em 1em 0em;
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-  z-index: -1;
-}
+// .center::before {
+//   background: var(--secondary-glow);
+//   border-radius: 50%;
+//   width: 480px;
+//   height: 360px;
+//   margin-left: -400px;
+//   z-index: -1;
+// }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
+// .center::after {
+//   background: var(--primary-glow);
+//   width: 240px;
+//   height: 180px;
+//   z-index: -1;
+// }
 
-.center::before,
-.center::after {
-  content: "";
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
+// .center::before,
+// .center::after {
+//   content: "";
+//   left: 20%;
+//   position: absolute;
+//   filter: blur(45px);
+//   transform: translateZ(0);
+// }
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
@@ -239,16 +322,16 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
+// @media (prefers-color-scheme: dark) {
+//   .vercelLogo {
+//     filter: invert(1);
+//   }
 
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
+//   .logo,
+//   .thirteen img {
+//     filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
+//   }
+// }
 
 @keyframes rotate {
   from {
