--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -15,7 +15,7 @@
   font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
-  padding: 1.5em 2em;
+  padding: 2em 1.5em;
   justify-content: space-between;
   align-items: center;
   // max-width: 1250px;
